[workspace]
members = [
    "y2015d01",
    "y2015d02",
    "y2015d03",
    "y2015d04",
    "y2015d05",
    "y2015d06",
    "y2015d07",
    "y2015d08",
    "y2015d08",
    "y2020d01",
    "y2020d02",
    "y2020d03",
    "y2020d04",
    "y2020d05",
    "y2020d06",
    "y2020d07",
    "y2020d08",
    "y2020d09",
    "y2020d10",
    "y2020d11",
    "y2020d12",
    "y2020d13",
    "y2020d14",
    "y2020d15",
    "y2020d16",
    "y2020d17",
    "y2020d18",
    "y2020d19",
    "y2020d20",
    "y2020d21",
    "common",
]
